--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/platform-express": "^8.0.0",
     "@types/bcrypt": "^5.0.2",
     "@types/dotenv": "^8.2.3",
+    "@types/passport-jwt": "^4.0.1",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
